--- a/sway/config
+++ b/sway/config
@@ -14,7 +14,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term foot
+set $term alacritty
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -36,6 +36,9 @@ output * bg /usr/share/backgrounds/default.png fill
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
+output HDMI-A-1 pos 0 0
+output eDP1 pos 1920 0
+
 ### Idle configuration
 #
 # Example configuration:
@@ -48,6 +51,12 @@ output * bg /usr/share/backgrounds/default.png fill
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
+
+exec swayidle -w \
+        timeout 300 'swaylock -f -c 000000' \
+        timeout 600 'swaymsg "output * dpms off"' \
+        resume 'swaymsg "output * dpms on"' \
+        before-sleep 'swaylock -f -c 000000'
 
 ### Input configuration
 #
@@ -65,6 +74,11 @@ output * bg /usr/share/backgrounds/default.png fill
 
 input "1:1:AT_Translated_Set_2_keyboard" {
     xkb_layout "us,pl"
+}
+
+input type:touchpad {
+    tap enabled
+    natural_scroll enabled
 }
 
 ### Key bindings
