--- a/waybar/config
+++ b/waybar/config
@@ -51,7 +51,7 @@
         "format": "{}% "
     },
     "temperature": {
-        "thermal-zone": 1,
+        "hwmon-path": "/sys/class/hwmon/hwmon5/temp1_input",
         "critical-threshold": 80,
         "format": "{temperatureC}°C {icon}",
         "format-icons": ["", "", ""]
