--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -74,7 +74,7 @@
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "on-click": "nmtui"
     },
     "pulseaudio": {
         "format": "{volume}% {icon} {format_source}",
