dotfiles: Automated sync :robot:

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -103,6 +103,6 @@
             "default": "🎜"
         },
         "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null"
+        "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null"
     }
 }
