dotfiles: Automated sync :robot:

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -277,6 +277,7 @@ for_window [app_id="blueman-manager"]       floating enable
 for_window [app_id="eog"]                   floating enable
 for_window [class="Steam"]                  floating enable
 for_window [class="discord"]                floating enable
+for_window [class="ftb-app"]                floating enable
 
 # Assign Lutris & games to Workspace 3
 #assign [name="Wine System Tray"]		workspace number 3
